# UAV_SIP

./: .gitignore  .gitmodules  README.md
src/lidar_perception/: CMakeLists.txt  package.xml
src/lidar_perception/include/lidar_perception/: lidar_perception_node.hpp  preprocess.hpp  surfel2d.hpp  surfel_debug_viz.hpp  surfel_extractor.hpp  surfel_map_manager.hpp  surfel_mapping.hpp  surfel_visualizer.hpp  trajectory_node.hpp
src/lidar_perception/launch/: test_flight.launch.py
src/lidar_perception/src/: lidar_perception_node.cpp  surfel_extractor.cpp  surfel_map_manager.cpp  surfel_mapping.cpp  surfel_visualizer.cpp  test_flight_node.cpp  trajectory_node.cpp
src/sip_interface/: CMakeLists.txt  package.xml
src/sip_interface/action/: ExecutePath.action
src/sparse_surfel_mapping/: CMakeLists.txt  package.xml
src/sparse_surfel_mapping/include/sparse_surfel_mapping/: planner_node.hpp  preprocess.hpp  spatial_hash.hpp  surfel.hpp  surfel_map.hpp  surfel_map_node.hpp  types.hpp  viewpoint.hpp  voxel.hpp
src/sparse_surfel_mapping/include/sparse_surfel_mapping/common/: mapping_types.hpp  planning_types.hpp
src/sparse_surfel_mapping/include/sparse_surfel_mapping/mapper/: preprocess.hpp  spatial_hash.hpp  surfel.hpp  surfel_map.hpp  voxel.hpp
src/sparse_surfel_mapping/include/sparse_surfel_mapping/planner/: a_star.hpp  collision_checker.hpp  coverage_tracker.hpp  frontier_finder.hpp  geodesic_potential_field.hpp  inspection_planner.hpp  rrt.hpp  surface_graph.hpp  viewpoint.hpp  viewpoint_creator.hpp  viewpoint_generator.hpp
src/sparse_surfel_mapping/include/sparse_surfel_mapping/ros_nodes/: planner_node.hpp  surfel_map_node.hpp
src/sparse_surfel_mapping/src/: planner_node.cpp  preprocess.cpp  spatial_hash.cpp  surfel.cpp  surfel_map.cpp  surfel_map_exec.cpp  surfel_map_node.cpp  viewpoint.cpp  voxel.cpp
src/sparse_surfel_mapping/src/mapper/: preprocess.cpp  spatial_hash.cpp  surfel.cpp  surfel_map.cpp  voxel.cpp
src/sparse_surfel_mapping/src/planner/: a_star.cpp  collision_checker.cpp  coverage_tracker.cpp  frontier_finder.cpp  geodesic_potential_field.cpp  inspection_planner.cpp  rrt.cpp  surface_graph.cpp  viewpoint.cpp  viewpoint_creator.cpp  viewpoint_generator.cpp
src/sparse_surfel_mapping/src/ros_nodes/: planner_node.cpp  surfel_map_node.cpp  trajectory_tracker.cpp
src/surfel_mapping/: CMakeLists.txt  package.xml
src/surfel_mapping/config/: surfel_mapping.yaml
src/surfel_mapping/include/surfel_mapping/: preprocess.hpp  surface_graph.hpp  surfel.hpp  surfel_fuse.hpp  surfel_map.hpp  surfel_mapping_node.hpp
src/surfel_mapping/launch/: surfel_mapping.launch.py
src/surfel_mapping/src/: surface_graph.cpp  surfel_fuse.cpp  surfel_map.cpp  surfel_mapping_exec.cpp  surfel_mapping_node.cpp
